--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
-    "express": "^5.1.0",
-    "mongodb": "^6.17.0",
+    "express": "^4.18.2",
     "mongoose": "^8.16.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pino": "^8.15.0"
   }
 }
