--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 MONGODB_USER=vkadgcundgd
-MONGODB_PASSWORD=pd3Ssaywt701aawJ
-MONGODB_URL=mongodb+srv://vkadgcundgd:<db_password>@cluster0.cqlr5fm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-MONGODB_DB=
+MONGODB_PASSWORD=vVu7yHoraQmQy9w0
+MONGODB_URL=mongodb+srv://<username>:<password>@cluster0.cqlr5fm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_DB=contactsDB
