--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "mongoose": "^8.16.1",
-    "morgan": "^1.10.0",
-    "pino": "^8.21.0"
+    "pino": "^8.15.0",
+    "pino-http": "^9.0.0"
   }
 }
