--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 MONGODB_USER=vkadgcundgd
-MONGODB_PASSWORD=vVu7yHoraQmQy9w0
-MONGODB_URL=mongodb+srv://vkadgcundgd:vVu7yHoraQmQy9w0@cluster0.cqlr5fm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_PASSWORD=vKTsNsWR0XIs9DEd
+MONGODB_URL=mongodb+srv://vkadgcundgd:vKTsNsWR0XIs9DEd@cluster0.cqlr5fm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_DB=contactsDB
